Se lista los modelos por aplicación

--- a/djadmin3/templates/theme_simple_admin/index.html
+++ b/djadmin3/templates/theme_simple_admin/index.html
@@ -7,7 +7,7 @@
         <h2>{{ group.app_name }}</h2>
         <ul>
             {% for modelAdmin in group.obj.models %}
-                <li>{{ modelAdmin }} - {{ modelAdmin.model }}</li>
+                <li>{{ modelAdmin }} - {{ modelAdmin.verbose_name }}</li>
             {% endfor %}
         </ul>
     </div>
